# beeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
beeline/: __init__.py
beeline/api/: routers.py
beeline/api/routes/: __init__.py  no_context.py
resources/models/no_context/: saved_model.pb
resources/models/no_context/variables/: variables.index
